# SpaceshipGame

./: .gitignore  CMakeLists.txt
assets/: leaderboard.json
assets/meshes/: Asteroid02.mtl  Asteroid03.mtl  Asteroid_LowPoly.mtl  Enemy.mtl  EnemyV2.mtl  EnemyV3.mtl  Navicella_LowPoly.mtl  PlayerShip.mtl  PlayerShipV2.mtl  PlayerShipV3.mtl  TestCube.mtl
assets/scores/: leaderboard.json
assets/shaders/: bloomVFX.fs  bloomVFX.vs  crt.fs  glyphs.fs  glyphs.vs  hdr.fs  pbr.fs  pbr.vs  powerup.fs  powerup.vs  simple.fs  simple.vs  simpleTex.fs  simpleTex.vs  skybox.vs  space.fs  space.vs  ui.fs  ui.vs  uiButton.fs  uiButton.vs
include/: Asteroid.h  EnemyShip.h  GameScene.h  PlayerShip.h  TitleScreen.h  app.h  bullet.h  camera.h  collisionDetection.h  font.h  gameObject.h  gameOverScene.h  leaderboardScene.h  light.h  log.h  material.h  mesh.h  pauseScene.h  player.h  powerUp.h  renderer.h  scene.h  settingsScene.h  shader.h  skybox.h  texture.h  transform.h  ui.h
include/managers/: audioManager.h  inputManager.h  logmanager.h  sceneManager.h  windowManager.h
include/utils/: utils.h
src/: Asteroid.cpp  CMakelists.txt  EnemyShip.cpp  GameScene.cpp  PlayerShip.cpp  TitleScreen.cpp  app.cpp  bullet.cpp  camera.cpp  collisionDetection.cpp  font.cpp  gameOverScene.cpp  gameobject.cpp  leaderboardScene.cpp  material.cpp  mesh.cpp  pauseScene.cpp  player.cpp  powerUp.cpp  renderer.cpp  scene.cpp  settingsScene.cpp  shader.cpp  skybox.cpp  texture.cpp  ui.cpp
src/managers/: CMakeLists.txt  audioManager.cpp  inputManager.cpp  logmanager.cpp  sceneManager.cpp  windowManager.cpp
src/utils/: CMakeLists.txt  utils.cpp
test/mesh/: CMakeLists.txt
test/shader/: CMakeLists.txt  main.cpp
test/texture/: CMakeLists.txt  main.cpp
